--- a/FizzBuzzKata2/src/FizzBuzzKata2/FizzBuzz.FrontEnd/FizzBuzz.FrontEnd.csproj
+++ b/FizzBuzzKata2/src/FizzBuzzKata2/FizzBuzz.FrontEnd/FizzBuzz.FrontEnd.csproj
@@ -46,6 +46,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FizzBuzz.Core\FizzBuzz.Core.csproj">
+      <Project>{F85ED6D2-27E6-494B-8B63-1FF90F872E96}</Project>
+      <Name>FizzBuzz.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
